--- a/index.html
+++ b/index.html
@@ -114,7 +114,8 @@
 <!-- The News Section -->
   <div class="w3-container w3-light-grey w3-padding-32" id="news">
    <h2>News</h2>
-      <p><li> <strong> 05/2024, invited to be a TPC member of IEEE MSN 2024.</strong> <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a style="color: #447ec9" href="https://ieee-msn.org/2024/cf-papers.php">Call for Papers</a>
+      <p><li> <strong> 07/2024, invited to be a TPC member of IEEE ICPADS 2024.</strong>
+      <p><li> <strong> 05/2024, invited to be a TPC member of IEEE MSN 2024.</strong>
       <p><li> <strong> 09/2023, joined Duke University and NSF Athena as a Postdoctoral Associate.</strong> <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<em>Host:</em> Dr. Tingjun Chen.
       <p><li> <strong> 05/2023, successfully defended my Ph.D. thesis.</strong> <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<em>Committee:</em> Dr. Li Xiao, Dr. Matt Mutka, Dr. Tianxing Li, and Dr. Xiaobo Tan. 
       <p><li> <strong> 09/2022, passed comprehensive exam.</strong> <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<em>Committee:</em> Dr. Li Xiao, Dr. Matt Mutka, Dr. Tianxing Li, and Dr. Xiaobo Tan. 
