--- a/index.html
+++ b/index.html
@@ -90,11 +90,11 @@
       <img style="width: 80%;max-width: 320px" alt="profile photo" src="images/XiaoRound5.png">
       <h1>Xiao Zhang</h1>
         <p class="w3-justify" style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;max-width:600px">
-          I am an incoming tenure-track Assistant Professor of <a style="color: #447ec9" href="https://umdearborn.edu/cecs/departments/computer-and-information-science">Computer and Information Science</a> (CIS) department in Fall 2024 at the <a style="color: #447ec9" href="https://umdearborn.edu/">University of Michigan-Dearborn</a> (UM-Dearborn). <strong>I am looking for highly self-motivated students (<a style="color: #447ec9" href="https://umdearborn.edu/cecs/departments/computer-and-information-science/graduate-programs/phd-computer-and-information-science">Ph.D.</a>, master, undergraduate, high school, visiting, and intern) to join my group</strong>. If you are passionate about related research topics, please email me with your CV, transcripts, and several sentences about your research interests.   
+          I am an assistant professor of <a style="color: #447ec9" href="https://umdearborn.edu/cecs/departments/computer-and-information-science">Computer and Information Science</a> (CIS) department in Fall 2024 at the <a style="color: #447ec9" href="https://umdearborn.edu/">University of Michigan-Dearborn</a> (UM-Dearborn). <strong>I am looking for highly self-motivated students (<a style="color: #447ec9" href="https://umdearborn.edu/cecs/departments/computer-and-information-science/graduate-programs/phd-computer-and-information-science">Ph.D.</a>, master, undergraduate, high school, visiting, and intern) to join my group</strong>. If you are passionate about related research topics, please email me with your CV, transcripts, and several sentences about your research interests.   
         </p>
 
         <p class="w3-justify" style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;max-width:600px">
-          I am currently a Postdoctoral Associate at <a style="color: #447ec9" href="https://duke.edu/">Duke University</a> and <a style="color: #447ec9" href="https://athena.duke.edu/">NSF Athena</a> (NSF NAI for Edge Computing Leveraging Next Generation Networks), working with Prof. <a style="color: #447ec9" href="https://tingjunchen.com/">Tingjun Chen</a>. Prior to that, I received my Ph.D. degree in the <a style="color: #447ec9" href="https://www.cse.msu.edu/">Computer Science and Engineering</a> department at <a style="color: #447ec9" href="https://msu.edu/">Michigan State University</a> (MSU) in 2023. My Ph.D. advisor was Prof. <a style="color: #447ec9" href="https://www.cse.msu.edu/~lxiao/">Li Xiao</a>. I earned my M.S. in Computer Science at <a style="color: #447ec9" href="">Northwestern Polytechnical University</a> in 2019, advised by Prof. <a style="color: #447ec9" href="">Shining Li</a> and B.E. in Internet-of-Things Engineering from the college of Computer Science with honor at <a style="color: #447ec9" href="">Taiyuan University of Technology</a> in 2016.
+          I was a Postdoctoral Associate at <a style="color: #447ec9" href="https://duke.edu/">Duke University</a> and <a style="color: #447ec9" href="https://athena.duke.edu/">NSF Athena</a> (NSF NAI for Edge Computing Leveraging Next Generation Networks), working with Prof. <a style="color: #447ec9" href="https://tingjunchen.com/">Tingjun Chen</a>. Prior to that, I received my Ph.D. degree in the <a style="color: #447ec9" href="https://www.cse.msu.edu/">Computer Science and Engineering</a> department at <a style="color: #447ec9" href="https://msu.edu/">Michigan State University</a> (MSU) in 2023. My Ph.D. advisor was Prof. <a style="color: #447ec9" href="https://www.cse.msu.edu/~lxiao/">Li Xiao</a>. I earned my M.S. in Computer Science at <a style="color: #447ec9" href="">Northwestern Polytechnical University</a> in 2019, advised by Prof. <a style="color: #447ec9" href="">Shining Li</a> and B.E. in Internet-of-Things Engineering from the college of Computer Science with honor at <a style="color: #447ec9" href="">Taiyuan University of Technology</a> in 2016.
         </p>
 
         <p class="w3-justify" style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;max-width:600px">
@@ -116,8 +116,8 @@
    <h2>News</h2>
       <p><li> <strong> 07/2024, invited to be a TPC member of IEEE ICPADS 2024.</strong>
       <p><li> <strong> 05/2024, invited to be a TPC member of IEEE MSN 2024.</strong>
-      <p><li> <strong> 09/2023, joined Duke University and NSF Athena as a Postdoctoral Associate.</strong> <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<em>Host:</em> Dr. Tingjun Chen.
-      <p><li> <strong> 05/2023, successfully defended my Ph.D. thesis.</strong> <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<em>Committee:</em> Dr. Li Xiao, Dr. Matt Mutka, Dr. Tianxing Li, and Dr. Xiaobo Tan. 
+      <p><li> <strong> 09/2023, joined Duke University and NSF Athena as a Postdoctoral Associate.</strong> 
+      <p><li> <strong> 05/2023, successfully defended my Ph.D. thesis. </strong> 
       <p><li> <strong> 09/2022, passed comprehensive exam.</strong> <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<em>Committee:</em> Dr. Li Xiao, Dr. Matt Mutka, Dr. Tianxing Li, and Dr. Xiaobo Tan. 
       <p><li> <strong> 01/2020, passed qualification exam.</strong>  <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<em>Committee:</em> Dr. Guan-Hua Tu, Dr. Ofria Charles, and Dr. Yunhao Liu. </em>
       <p><li> <strong> 01/2019, started PhD journey.</strong> <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<em>Advisor:</em> Dr. Li Xiao.
@@ -413,6 +413,8 @@ The Projects Section
       <!-- <p><li> Reviewer of <a href="https://icml.cc/Conferences/2021">ICML 2021</a>, <a href="https://nips.cc/Conferences/2021/">NeurIPS 2021</a>.</p> -->
       <!-- <p><li> Leturer <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<em>MSN 2024</em> -->
       <p><li> At MSU (Teaching Assistant) <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<em>CSE 331 Algorithms and Data Structures, CSE 260 Discrete Structures, CSE 232 Introduction to Programming II </em>
+      <p><li> At UM-Dearborn <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<em>CIS 400 Programming Languages</em>
+
   </div>
 
 <!-- The Services Section -->
@@ -420,7 +422,7 @@ The Projects Section
     <h2>Services</h2>
       <!-- <p><li> Reviewer of <a href="https://icml.cc/Conferences/2021">ICML 2021</a>, <a href="https://nips.cc/Conferences/2021/">NeurIPS 2021</a>.</p> -->
       <p><li> External Reviewer <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<em>INFOCOM 2020-2024, MobiCom 2024, ICC 2023, CVPR 2023, MASS 2019, GLOBECOM 2019, IEEE Transactions on <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Human-Machine Systems (THMS), IEEE Transactions on Mobile Computing (TMC), IEEE Journal on Selected Areas in <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Communications (JSAC), IEEE Communication Letters</em>
-      <p><li> Program Committee <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<em>MSN 2024</em>
+      <p><li> Program Committee <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<em>MSN 2024, ICPADS 2024</em>
   </div>
 
 
