--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@ The Projects Section
         <br>
         David Hunt, Shaocheng Luo, Amir Khazraei, <strong>Xiao Zhang</strong>, Spencer Hallyburton, Tingjun Chen, Miroslav Pajic        
         <br>
-        <em>ICRA</em> 2024  (to appear) | <a style="color: #447ec9" href="">paper</a> 
+        <em>ICRA</em> 2024 | <a style="color: #447ec9" href="">paper</a> 
         </p>
 
       <p>
@@ -239,13 +239,13 @@ The Projects Section
         <!-- <em>MobiCom</em> 2022 | <a style="color: #447ec9" href="https://www.sigmobile.org/mobicom/2022/accepted.html">paper</a>  -->
       </p>
 
-      <p>
+      <!-- <p>
         <li><strong>Handling Data Heterogeneity in Federated Learning via Knowledge Fusion</strong>
         <br>
         Xu Zhou, Xinyu Lei, Cong Yang, Yichun Shi, <strong>Xiao Zhang</strong>, and Jingwen Shi
         <br>
         <em>arXiv preprint</em> 2022 | <a style="color: #447ec9" href="data/FL_fusion.pdf">paper</a> 
-        </p>
+        </p> -->
 
       <p>
       <li><strong>LiFOD: Lighting Extra Data via Fine-grained OWC Dimming</strong>
@@ -412,8 +412,9 @@ The Projects Section
     <h2>Teaching</h2>
       <!-- <p><li> Reviewer of <a href="https://icml.cc/Conferences/2021">ICML 2021</a>, <a href="https://nips.cc/Conferences/2021/">NeurIPS 2021</a>.</p> -->
       <!-- <p><li> Leturer <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<em>MSN 2024</em> -->
-      <p><li> At MSU (Teaching Assistant) <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<em>CSE 331 Algorithms and Data Structures, CSE 260 Discrete Structures, CSE 232 Introduction to Programming II </em>
       <p><li> At UM-Dearborn <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<em>CIS 400 Programming Languages</em>
+      <p><li> At MSU <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<em>CSE 331 Algorithms and Data Structures, CSE 260 Discrete Structures, CSE 232 Introduction to Programming II </em>
+
 
   </div>
 
