--- a/index.html
+++ b/index.html
@@ -114,13 +114,14 @@
 <!-- The News Section -->
   <div class="w3-container w3-light-grey w3-padding-32" id="news">
    <h2>News</h2>
+      <p><li> <strong> 08/2024, joined UM-Dearborn as a tenure-track Assistant Professor.</strong>
       <p><li> <strong> 07/2024, invited to be a TPC member of IEEE ICPADS 2024.</strong>
       <p><li> <strong> 05/2024, invited to be a TPC member of IEEE MSN 2024.</strong>
-      <p><li> <strong> 09/2023, joined Duke University and NSF Athena as a Postdoctoral Associate.</strong> 
+      <p><li> <strong> 09/2023, joined Duke University as a Postdoctoral Associate.</strong> 
       <p><li> <strong> 05/2023, successfully defended my Ph.D. thesis. </strong> 
-      <p><li> <strong> 09/2022, passed comprehensive exam.</strong> <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<em>Committee:</em> Dr. Li Xiao, Dr. Matt Mutka, Dr. Tianxing Li, and Dr. Xiaobo Tan. 
-      <p><li> <strong> 01/2020, passed qualification exam.</strong>  <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<em>Committee:</em> Dr. Guan-Hua Tu, Dr. Ofria Charles, and Dr. Yunhao Liu. </em>
-      <p><li> <strong> 01/2019, started PhD journey.</strong> <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<em>Advisor:</em> Dr. Li Xiao.
+      <p><li> <strong> 09/2022, passed comprehensive exam.</strong>  
+      <p><li> <strong> 01/2020, passed qualification exam.</strong>  
+      <p><li> <strong> 01/2019, started PhD journey.</strong> 
   </div> 
    	  <!-- <p><li> 02/2022, Our suvery paper on vision transformer has been accepted by <a href="https://arxiv.org/pdf/2012.12556">IEEE TPAMI</a>.</li></p> -->
       <!-- <p><li> 09/2021, 10 papers have been accepted by <a href="https://nips.cc/Conferences/2021">NeurIPS 2021</a>.</li></p>
