--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
       <img style="width: 80%;max-width: 320px" alt="profile photo" src="images/XiaoRound5.png">
       <h1>Xiao Zhang</h1>
         <p class="w3-justify" style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;max-width:600px">
-          I am an Assistant Professor in the Department of <a style="color: #447ec9" href="https://umdearborn.edu/cecs/departments/computer-and-information-science">Computer and Information Science</a> at the <a style="color: #447ec9" href="https://umdearborn.edu/">University of Michigan-Dearborn</a>. Before joining UM-Dearborn, I was a Postdoctoral Associate at <a style="color: #447ec9" href="https://duke.edu/">Duke University</a>. I obtained my Ph.D. degree in the Computer Science and Engineering at <a style="color: #447ec9" href="https://msu.edu/">Michigan State University</a>, and my M.S. in Computer Science at Northwestern Polytechnical University and B.E. in Internet-of-Things Engineering with honor at Taiyuan University of Technology. 
+          I am an Assistant Professor in the Department of <a style="color: #447ec9" href="https://umdearborn.edu/cecs/departments/computer-and-information-science">Computer and Information Science</a> at the <a style="color: #447ec9" href="https://umdearborn.edu/">University of Michigan-Dearborn</a>. Before joining UM-Dearborn, I was a Postdoctoral Associate at <a style="color: #447ec9" href="https://duke.edu/">Duke University</a>. I obtained my Ph.D. degree in the Computer Science and Engineering at <a style="color: #447ec9" href="https://msu.edu/">Michigan State University</a>, and my M.S. in Computer Science at Northwestern Polytechnical University and B.E. in Internet-of-Things Engineering with honor at Taiyuan University of Technology. <strong>I am looking for highly self-motivated students (<a style="color: #447ec9" href="https://umdearborn.edu/cecs/departments/computer-and-information-science/graduate-programs/phd-computer-and-information-science">Ph.D.</a>, master, undergraduate, high school, visiting, and intern) to join my group</strong>. If you are passionate about related research topics, please email me with your CV, transcripts, and several sentences about your research interests.  
         </p>
 
         <p class="w3-justify" style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;max-width:600px">
@@ -98,9 +98,9 @@
           <!-- In August 2023, I got my <strong>Ph.D.</strong> degree of <strong>Computer Science</strong> at <strong>Michigan State University</strong>, advised by Dr. <strong>Li Xiao</strong> in eLANS lab. My Ph.D. thesis is "<em>Exploring Spatial-Temporal Multi-Dimensions in Optical Wireless Communication and Sensing</em>". Before that, I obtained my master degree at computer school of <strong>Northwestern Polytechnical University</strong>, advised by Dr. <strong>Shining Li</strong> at Wireless Sensor Network lab. I obtained my bachelor degree of Internet-of-Things Engineering at <strong>Taiyuan University of Technology</strong>. -->
         </p>
 
-        <p class="w3-justify" style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;max-width:600px">
-          <strong>I am looking for highly self-motivated students (<a style="color: #447ec9" href="https://umdearborn.edu/cecs/departments/computer-and-information-science/graduate-programs/phd-computer-and-information-science">Ph.D.</a>, master, undergraduate, high school, visiting, and intern) to join my group</strong>. If you are passionate about related research topics, please email me with your CV, transcripts, and several sentences about your research interests.  
-        </p>
+        <!-- <p class="w3-justify" style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;max-width:600px">
+          
+        </p> -->
 
         <p class="w3-center">
           <!-- <a href="mailto:zhan1387@msu.edu">MSU Email</a> &nbsp/&nbsp
