--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 <body class="w3-content" style="max-width:1000px">
 
 <!-- Sidebar/menu -->
-<nav class="w3-sidebar w3-bar-block w3-blue w3-collapse w3-top w3-right" style="z-index:3;width:150px; background-color:#00274c;" id="mySidebar">
+<nav class="w3-sidebar w3-bar-block w3-blue w3-collapse w3-top w3-right" style="z-index:3;width:150px;" id="mySidebar">
   <div class="w3-container w3-display-container w3-padding-16">
     <h3><b>Welcome</b></h3>
   </div>
@@ -90,7 +90,7 @@
       <img style="width: 80%;max-width: 320px" alt="profile photo" src="images/XiaoRound5.png">
       <h1>Xiao Zhang</h1>
         <p class="w3-justify" style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;max-width:600px">
-          I am an Assistant Professor in the Department of <a style="color: #447ec9" href="https://umdearborn.edu/cecs/departments/computer-and-information-science">Computer and Information Science</a> at the <a style="color: #447ec9" href="https://umdearborn.edu/">University of Michigan-Dearborn</a>. Before joining UM-Dearborn, I was a Postdoctoral Associate at <a style="color: #447ec9" href="https://duke.edu/">Duke University</a>. I obtained my Ph.D. degree in the Computer Science and Engineering at <a style="color: #447ec9" href="https://msu.edu/">Michigan State University</a>, and my M.S. in Computer Science at Northwestern Polytechnical University and B.E. in Internet-of-Things Engineering with honor at Taiyuan University of Technology. <strong>I am looking for highly self-motivated students (<a style="color: #447ec9" href="https://umdearborn.edu/cecs/departments/computer-and-information-science/graduate-programs/phd-computer-and-information-science">Ph.D.</a>, master, undergraduate, high school, visiting, and intern) to join my group</strong>. If you are passionate about related research topics, please email me with your CV, transcripts, and several sentences about your research interests.  
+          I am an Assistant Professor in the Department of <a style="color: #447ec9" href="https://umdearborn.edu/cecs/departments/computer-and-information-science">Computer and Information Science</a> at the <a style="color: #447ec9" href="https://umdearborn.edu/">University of Michigan-Dearborn</a>, where I lead the Trustworthy AIoT Lab (TAI Lab). Before joining UM-Dearborn, I was a Postdoctoral Associate at <a style="color: #447ec9" href="https://duke.edu/">Duke University</a>. I obtained my Ph.D. degree in the Computer Science and Engineering at <a style="color: #447ec9" href="https://msu.edu/">Michigan State University</a>, and my M.S. in Computer Science at Northwestern Polytechnical University and B.E. in Internet-of-Things Engineering with honor at Taiyuan University of Technology. <strong>I am looking for highly self-motivated students (<a style="color: #447ec9" href="https://umdearborn.edu/cecs/departments/computer-and-information-science/graduate-programs/phd-computer-and-information-science">Ph.D.</a>, master, undergraduate, high school, visiting, and intern) to join my group</strong>. If you are passionate about related research topics, please email me with your CV, transcripts, and several sentences about your research interests.  
         </p>
 
         <p class="w3-justify" style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;max-width:600px">
