--- a/index.html
+++ b/index.html
@@ -55,23 +55,23 @@
 <!-- Sidebar/menu -->
 <nav class="w3-sidebar w3-bar-block w3-blue w3-collapse w3-top w3-right" style="z-index:3;width:150px;" id="mySidebar">
   <div class="w3-container w3-display-container w3-padding-16">
-    <h3><b>Welcome</b></h3>
+    <h3><b><a style="color: #FFCB05"Welcome></a></b></h3>
   </div>
   <div class="w3-padding-64 w3-text-light-grey w3-large" style="font-weight:bold">
-    <a href="#home" class="w3-bar-item w3-button">Home</a>
-    <a href="#news" class="w3-bar-item w3-button">News</a>
+    <a style="color: #FFCB05" href="#home" class="w3-bar-item w3-button">Home</a>
+    <a style="color: #FFCB05" href="#news" class="w3-bar-item w3-button">News</a>
     <!-- <a href="#projects" class="w3-bar-item w3-button">Projects</a> -->
     <!-- <a href="#talks" class="w3-bar-item w3-button">Talks</a> -->
-    <a href="#publications" class="w3-bar-item w3-button">Research</a>
-    <a href="#teaching" class="w3-bar-item w3-button">Teaching</a>
-    <a href="#service" class="w3-bar-item w3-button">Services</a>
-    <a href="#award" class="w3-bar-item w3-button">Awards</a>
+    <a style="color: #FFCB05" href="#publications" class="w3-bar-item w3-button">Research</a>
+    <a style="color: #FFCB05" href="#teaching" class="w3-bar-item w3-button">Teaching</a>
+    <a style="color: #FFCB05" href="#service" class="w3-bar-item w3-button">Services</a>
+    <a style="color: #FFCB05" href="#award" class="w3-bar-item w3-button">Awards</a>
   </div>
 </nav>
 
 <!-- Top menu on small screens -->
 <header class="w3-bar w3-top w3-hide-large w3-blue w3-xlarge">
-  <div class="w3-bar-item w3-padding-24">Welcome</div>
+  <div class="w3-bar-item w3-padding-24"><a style="color: #FFCB05"Welcome></a></div>
   <a href="javascript:void(0)" class="w3-bar-item w3-button w3-padding-24 w3-right"  style="font-stretch: extra-expanded;" onclick="w3_open()"><b>≡</b></a>
   </div>
 </header>
@@ -88,9 +88,9 @@
 <!-- The Home Section -->
     <div class="w3-container w3-center w3-padding-32" id="home">
       <img style="width: 80%;max-width: 320px" alt="profile photo" src="images/XiaoRound5.png">
-      <h1>Xiao Zhang</h1>
+      <h1><a>Xiao Zhang</a></h1>
         <p class="w3-justify" style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;max-width:600px">
-          I am an Assistant Professor in the Department of <a style="color: #447ec9" href="https://umdearborn.edu/cecs/departments/computer-and-information-science">Computer and Information Science</a> at the <a style="color: #447ec9" href="https://umdearborn.edu/">University of Michigan-Dearborn</a>, where I lead the Trustworthy AIoT Lab (TAI Lab). Before joining UM-Dearborn, I was a Postdoctoral Associate at <a style="color: #447ec9" href="https://duke.edu/">Duke University</a>. I obtained my Ph.D. degree in the Computer Science and Engineering at <a style="color: #447ec9" href="https://msu.edu/">Michigan State University</a>, and my M.S. at Northwestern Polytechnical University and B.E. with honor at Taiyuan University of Technology. <strong>I am looking for highly self-motivated students (<a style="color: #447ec9" href="https://umdearborn.edu/cecs/departments/computer-and-information-science/graduate-programs/phd-computer-and-information-science">Ph.D.</a>, master, undergraduate, high school, visiting, and intern) to join my group</strong>. If you are passionate about related research topics, please email me with your CV, transcripts, and several sentences about your research interests.  
+          I am an Assistant Professor in the Department of <a style="color: #447ec9" href="https://umdearborn.edu/cecs/departments/computer-and-information-science">Computer and Information Science</a> at the <a style="color: #447ec9" href="https://umdearborn.edu/">University of Michigan-Dearborn</a>, where I lead the Trustworthy AIoT Lab (TAI Lab). Before joining UM-Dearborn, I was a Postdoctoral Associate at <a style="color: #447ec9" href="https://duke.edu/">Duke University</a>. I obtained my Ph.D. degree in the Computer Science and Engineering at <a style="color: #447ec9" href="https://msu.edu/">Michigan State University</a>, my M.S. degree at Northwestern Polytechnical University and B.E. degree with honor at Taiyuan University of Technology. <strong>I am looking for highly self-motivated students (<a style="color: #a81212" href="https://umdearborn.edu/cecs/departments/computer-and-information-science/graduate-programs/phd-computer-and-information-science">Ph.D.</a>, master, undergraduate, high school, visiting, and intern) to join my group</strong>. If you are passionate about related research topics, please email me with your CV, transcripts, and several sentences about your research interests.  
         </p>
 
         <p class="w3-justify" style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;max-width:600px">
