--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 <!-- The News Section -->
   <div class="w3-container w3-light-grey w3-padding-32" id="news">
    <h2>News</h2>
-      <p><li> <strong> 08/2024, joined UM-Dearborn as a tenure-track Assistant Professor.</strong>
+      <p><li> <strong> 09/2024, joined UM-Dearborn as a tenure-track Assistant Professor.</strong>
       <p><li> <strong> 07/2024, invited to be a TPC member of IEEE ICPADS 2024.</strong>
       <p><li> <strong> 05/2024, invited to be a TPC member of IEEE MSN 2024.</strong>
       <p><li> <strong> 09/2023, joined Duke University as a Postdoctoral Associate.</strong> 
@@ -186,6 +186,23 @@ The Projects Section
     <h4> Conference Papers:</h4>
 
     <ol>
+
+      <p>
+        <li><strong>HoloCube: 3D Opitcal IoT Connections via Software Defined Pepper's Ghost</strong>
+        <br>
+        <strong>Xiao Zhang</strong>, Li Xiao, and Matt W. Mutka        
+        <br>
+        <em>ICNP</em> 2024 | <a style="color: #447ec9" href="">paper</a> 
+        </p>
+
+      <p>
+        <li><strong>WavePurifier: Purifying Audio Adversarial Examples via Hierarchical Diffusion Models</strong>
+        <br>
+        Hanqing Guo, Guangjing Wang, Bocheng Chen, Yuanda Wang, <strong>Xiao Zhang</strong>, Xun Chen, Qiben Yan, Li Xiao       
+        <br>
+        <em>MobiCom</em> 2024 | <a style="color: #447ec9" href="">paper</a> 
+        </p>
+
 
       <p>
         <li><strong>RadCloud: Real-Time High-Resolution Point Cloud Generation Using Low-Cost Radars for Aerial and Ground Vehicles</strong>
@@ -335,6 +352,15 @@ The Projects Section
 
     <h4> Workshop/Poster/Demo Papers:</h4>
     <ol>
+
+      <p>
+        <li><strong>Holographic Optical Tag enabled Omindirectional IoT Connection
+        </strong>
+        <br>
+        <strong>Xiao Zhang</strong>, Li Xiao, and Matt W. Mutka  
+        <br>
+        <em>SIGCOMM Poster</em> 2024 | <a style="color: #447ec9" href="data/PoseFly_Demo.pdf">paper</a> 
+      </p>
 
       <p>
         <li><strong>Integrated On-site Localization and Optical Camera Communication for Drones
