--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 
 <!-- Top menu on small screens -->
 <header class="w3-bar w3-top w3-hide-large w3-blue w3-xlarge">
-  <div class="w3-bar-item w3-padding-24"><a style="color: #FFCB05">Welcome</a></div>
+  <div class="w3-bar-item w3-padding-24"><a style="color: #FFCB05"><strong>WELCOME</strong></a></div>
   <a href="javascript:void(0)" class="w3-bar-item w3-button w3-padding-24 w3-right"  style="font-stretch: extra-expanded;" onclick="w3_open()"><b>≡</b></a>
   </div>
 </header>
@@ -90,7 +90,7 @@
       <img style="width: 80%;max-width: 320px" alt="profile photo" src="images/xiao_round_um_2.png">
       <h1><a>Xiao Zhang</a></h1>
         <p class="w3-justify" style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;max-width:600px">
-          I am an Assistant Professor in the Department of <a style="color: #447ec9" href="https://umdearborn.edu/cecs/departments/computer-and-information-science">Computer and Information Science</a> at the <a style="color: #447ec9" href="https://umdearborn.edu/">University of Michigan-Dearborn</a>, where I lead the Trustworthy AIoT Lab (TAI Lab). Before joining UM-Dearborn, I was a Postdoctoral Associate at <a style="color: #447ec9" href="https://duke.edu/">Duke University</a>. I obtained my Ph.D. degree in the Computer Science and Engineering at <a style="color: #447ec9" href="https://msu.edu/">Michigan State University</a>, my M.S. degree at Northwestern Polytechnical University and B.E. degree with honor at Taiyuan University of Technology. <strong>I am looking for highly self-motivated students (<a style="color: #ff0000" href="https://umdearborn.edu/cecs/departments/computer-and-information-science/graduate-programs/phd-computer-and-information-science">Ph.D.</a>, master, undergraduate, high school, visiting, and intern) to join my group</strong>. If you are passionate about related research topics, please email me with your CV, transcripts, and several sentences about your research interests.  
+          I am an Assistant Professor in the Department of <a style="color: #447ec9" href="https://umdearborn.edu/cecs/departments/computer-and-information-science">Computer and Information Science</a> at the <a style="color: #447ec9" href="https://umdearborn.edu/">University of Michigan-Dearborn</a>, where I lead the Trustworthy AIoT Lab (<strong>TAI Lab</strong>). Before joining UM-Dearborn, I was a Postdoctoral Associate at <a style="color: #447ec9" href="https://duke.edu/">Duke University</a>. I obtained my Ph.D. degree in the Computer Science and Engineering at <a style="color: #447ec9" href="https://msu.edu/">Michigan State University</a>, my M.S. degree at Northwestern Polytechnical University and B.E. degree with honor at Taiyuan University of Technology. <strong>I am looking for highly self-motivated students (<a style="color: #ff0000" href="https://umdearborn.edu/cecs/departments/computer-and-information-science/graduate-programs/phd-computer-and-information-science">Ph.D.</a>, master, undergraduate, high school, visiting, and intern) to join my group</strong>. If you are passionate about related research topics, please email me with your CV, transcripts, and several sentences about your research interests.  
         </p>
 
         <p class="w3-justify" style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;max-width:600px">
