--- a/index.html
+++ b/index.html
@@ -359,7 +359,7 @@ The Projects Section
         <br>
         <strong>Xiao Zhang</strong>, Li Xiao, and Matt W. Mutka  
         <br>
-        <em>SIGCOMM Poster</em> 2024 | <a style="color: #447ec9" href="data/PoseFly_Demo.pdf">paper</a> 
+        <em>SIGCOMM Poster</em> 2024 | <a style="color: #447ec9" href="https://dl.acm.org/doi/abs/10.1145/3672202.3673726">paper</a> 
       </p>
 
       <p>
