--- a/index.html
+++ b/index.html
@@ -445,6 +445,31 @@ The Projects Section
 
   </div>
 
+  <div class="w3-container w3-padding-32" id="students">
+    <h2>Students</h2>
+      <!-- <p><li> Reviewer of <a href="https://icml.cc/Conferences/2021">ICML 2021</a>, <a href="https://nips.cc/Conferences/2021/">NeurIPS 2021</a>.</p> -->
+      <p><li> Ph.D. student<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<em> </em>
+      <p><li> master student<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<em> </em>
+      <p><li> undergraduate student<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<em> Deniz Acikbas, Soham Naik, Alan Raj, Zaynab Mourtada, Vannya Guedes, Fatima Qasem </em>
+      <p><li> intern student<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<em> </em>
+      <p><li> high school student<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<em> </em>
+      <p><li> visiting scholar <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<em> </em>
+  </div>
+
+
+  <!-- The Awards Section -->
+  <div class="w3-container w3-light-grey w3-padding-32" id="award">
+    <h2>Awards</h2>
+    <p><li> 2023, 2021, 2019, Graduate Office Fellowship, MSU</p>
+    <p><li> 2023, Dissertation Completion Fellowship, MSU</p>
+    <p><li> 2022, Graduate Travel Fellowship, MSU</p>
+    <p><li> 2019, Student Travel Grant, NSF-mmWaveRCN</p>
+    <p><li> 2016, 2017, 2018, Postgraduate Scholarship, NPU</p>
+    <p><li> 2016, Outstanding Graduate, TUT</p>
+    <p><li> 2015, President Scholarship, Top 10, TUT</p>
+    <p><li> 2013, 2014, National Encouragement Scholarship, China</p>
+  </div>  
+
 <!-- The Services Section -->
   <div class="w3-container w3-padding-32" id="service">
     <h2>Services</h2>
