--- a/index.html
+++ b/index.html
@@ -434,6 +434,19 @@ The Projects Section
     </p>
   </div> -->
 
+
+    <!-- The Students Section -->
+  <div class="w3-container w3-padding-32" id="students">
+    <h2>Students</h2>
+      <!-- <p><li> Reviewer of <a href="https://icml.cc/Conferences/2021">ICML 2021</a>, <a href="https://nips.cc/Conferences/2021/">NeurIPS 2021</a>.</p> -->
+      <p><li> Ph.D. student<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<em> </em>
+      <p><li> master student<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<em> </em>
+      <p><li> undergraduate student<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<em> Deniz Acikbas, Soham Naik, Alan Raj, Zaynab Mourtada, Vannya Guedes, Fatima Qasem </em>
+      <p><li> intern student<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<em> </em>
+      <p><li> high school student<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<em> </em>
+      <p><li> visiting scholar <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<em> </em>
+  </div>
+
     <!-- The Teaching Section -->
   <div class="w3-container w3-light-grey w3-padding-32" id="teaching">
     <h2>Teaching</h2>
@@ -445,16 +458,7 @@ The Projects Section
 
   </div>
 
-  <div class="w3-container w3-padding-32" id="students">
-    <h2>Students</h2>
-      <!-- <p><li> Reviewer of <a href="https://icml.cc/Conferences/2021">ICML 2021</a>, <a href="https://nips.cc/Conferences/2021/">NeurIPS 2021</a>.</p> -->
-      <p><li> Ph.D. student<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<em> </em>
-      <p><li> master student<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<em> </em>
-      <p><li> undergraduate student<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<em> Deniz Acikbas, Soham Naik, Alan Raj, Zaynab Mourtada, Vannya Guedes, Fatima Qasem </em>
-      <p><li> intern student<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<em> </em>
-      <p><li> high school student<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<em> </em>
-      <p><li> visiting scholar <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<em> </em>
-  </div>
+
 
 
   <!-- The Awards Section -->
