--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
     <!-- <a href="#talks" class="w3-bar-item w3-button">Talks</a> -->
     <a style="color: #FFCB05" href="#publications" class="w3-bar-item w3-button">Research</a>
     <a style="color: #FFCB05" href="#teaching" class="w3-bar-item w3-button">Teaching</a>
-    <a style="color: #FFCB05" href="#students" class="w3-bar-item w3-button">Teaching</a>
+    <a style="color: #FFCB05" href="#students" class="w3-bar-item w3-button">Students</a>
     <a style="color: #FFCB05" href="#service" class="w3-bar-item w3-button">Services</a>
     <a style="color: #FFCB05" href="#award" class="w3-bar-item w3-button">Awards</a>
   </div>
@@ -452,12 +452,12 @@ The Projects Section
     <div class="w3-container w3-padding-32" id="students">
       <h2>Students</h2>
         <!-- <p><li> Reviewer of <a href="https://icml.cc/Conferences/2021">ICML 2021</a>, <a href="https://nips.cc/Conferences/2021/">NeurIPS 2021</a>.</p> -->
-        <p><li> Ph.D. student<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<em> </em>
-        <p><li> master student<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<em> </em>
-        <p><li> undergraduate student<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<em> Deniz Acikbas, Soham Naik, Alan Raj, Zaynab Mourtada, Vannya Guedes, Fatima Qasem </em>
-        <p><li> intern student<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<em> </em>
-        <p><li> high school student<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<em> </em>
-        <p><li> visiting scholar <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<em> </em>
+        <p><li> <strong>Ph.D.</strong> <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<em> </em>
+        <p><li> <strong>master</strong> <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<em> </em>
+        <p><li> <strong>unergraduate</strong> <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<em> Deniz Acikbas, Soham Naik, Alan Raj, Zaynab Mourtada, Vannya Guedes, Fatima Qasem </em>
+        <p><li> <strong>intern</strong> <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<em> </em>
+        <p><li> <strong>high school</strong> <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<em> </em>
+        <p><li> <strong>visiting</strong>  <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<em> </em>
     </div>
   
 
