--- a/index.html
+++ b/index.html
@@ -454,7 +454,7 @@ The Projects Section
         <!-- <p><li> Reviewer of <a href="https://icml.cc/Conferences/2021">ICML 2021</a>, <a href="https://nips.cc/Conferences/2021/">NeurIPS 2021</a>.</p> -->
         <p><li> <strong>Ph.D.</strong> <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<em> </em>
         <p><li> <strong>master</strong> <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<em> </em>
-        <p><li> <strong>unergraduate</strong> <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<em> 2024-2025: Deniz Acikbas, Soham Naik, Alan Raj, Zaynab Mourtada, Vannya Guedes, Fatima Qasem </em>
+        <p><li> <strong>unergraduate</strong> <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<em> 2024-now: Deniz Acikbas, Soham Naik, Alan Raj, Zaynab Mourtada, Vannya Guedes, Fatima Qasem </em>
         <p><li> <strong>intern</strong> <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<em> </em>
         <p><li> <strong>high school</strong> <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<em> </em>
         <p><li> <strong>visiting</strong>  <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<em> </em>
