--- a/index.html
+++ b/index.html
@@ -455,6 +455,7 @@ The Projects Section
         <p><li> <strong>Ph.D.</strong> <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<em> </em>
         <p><li> <strong>master</strong> <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<em> </em>
         <p><li> <strong>undergraduate</strong> <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<em> 2024-now: Deniz Acikbas, Soham Naik, Alan Raj, Zaynab Mourtada, Vannya Guedes, Fatima Qasem </em>
+        <!-- <p><li> <strong>undergraduate</strong> <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<em> </em> -->
         <p><li> <strong>research intern</strong> <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<em> </em>
         <p><li> <strong>high school</strong> <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<em> </em>
         <p><li> <strong>visiting scholar</strong>  <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<em> </em>
