--- a/index.html
+++ b/index.html
@@ -64,9 +64,11 @@
     <!-- <a href="#talks" class="w3-bar-item w3-button">Talks</a> -->
     <a style="color: #FFCB05" href="#publications" class="w3-bar-item w3-button">Research</a>
     <a style="color: #FFCB05" href="#teaching" class="w3-bar-item w3-button">Teaching</a>
-    <a style="color: #FFCB05" href="#students" class="w3-bar-item w3-button">Students</a>
-    <a style="color: #FFCB05" href="#award" class="w3-bar-item w3-button">Awards</a>
+    <!-- <a style="color: #FFCB05" href="#students" class="w3-bar-item w3-button">Students</a> -->
+
     <a style="color: #FFCB05" href="#service" class="w3-bar-item w3-button">Services</a>
+
+    <a style="color: #FFCB05" href="#award" class="w3-bar-item w3-button">Awards</a>
   </div>
 </nav>
 
@@ -448,18 +450,27 @@ The Projects Section
 
   </div>
 
+  <!-- The Services Section -->
+  <div class="w3-container w3-padding-32" id="service">
+    <h2>Services</h2>
+      <!-- <p><li> Reviewer of <a href="https://icml.cc/Conferences/2021">ICML 2021</a>, <a href="https://nips.cc/Conferences/2021/">NeurIPS 2021</a>.</p> -->
+      <p><li> Program Committee <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<em>MSN 2024, ICPADS 2024</em>
+      <p><li> External Reviewer <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<em>INFOCOM 2020-2024, MobiCom 2024, ICC 2023, CVPR 2023, MASS 2019, GLOBECOM 2019, IEEE Transactions on <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Human-Machine Systems (THMS), IEEE Transactions on Mobile Computing (TMC), IEEE Journal on Selected Areas in <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Communications (JSAC), IEEE Communication Letters</em>
+      
+  </div>
+
     <!-- The Students Section -->
-    <div class="w3-container w3-padding-32" id="students">
+    <!-- <div class="w3-container w3-padding-32" id="students">
       <h2>Students</h2>
-        <!-- <p><li> Reviewer of <a href="https://icml.cc/Conferences/2021">ICML 2021</a>, <a href="https://nips.cc/Conferences/2021/">NeurIPS 2021</a>.</p> -->
-        <!-- <p><li> <strong>Ph.D.</strong> <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<em> </em>
+
+        <p><li> <strong>Ph.D.</strong> <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<em> </em>
         <p><li> <strong>master</strong> <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<em> </em>
         <p><li> <strong>undergraduate</strong> <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<em> 2024-now: Deniz Acikbas, Soham Naik, Alan Raj, Zaynab Mourtada, Vannya Guedes, Fatima Qasem </em>
         <p><li> <strong>undergraduate</strong> <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<em> </em>
         <p><li> <strong>research intern</strong> <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<em> </em>
         <p><li> <strong>high school</strong> <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<em> </em>
-        <p><li> <strong>visiting scholar</strong>  <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<em> </em> -->
-    </div>
+        <p><li> <strong>visiting scholar</strong>  <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<em> </em>
+    </div> -->
   
 
 
@@ -476,14 +487,7 @@ The Projects Section
     <p><li> 2013, 2014, National Encouragement Scholarship, China</p>
   </div>  
 
-<!-- The Services Section -->
-  <div class="w3-container w3-padding-32" id="service">
-    <h2>Services</h2>
-      <!-- <p><li> Reviewer of <a href="https://icml.cc/Conferences/2021">ICML 2021</a>, <a href="https://nips.cc/Conferences/2021/">NeurIPS 2021</a>.</p> -->
-      <p><li> Program Committee <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<em>MSN 2024, ICPADS 2024</em>
-      <p><li> External Reviewer <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<em>INFOCOM 2020-2024, MobiCom 2024, ICC 2023, CVPR 2023, MASS 2019, GLOBECOM 2019, IEEE Transactions on <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Human-Machine Systems (THMS), IEEE Transactions on Mobile Computing (TMC), IEEE Journal on Selected Areas in <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Communications (JSAC), IEEE Communication Letters</em>
-      
-  </div>
+
 
 
  
