--- a/index.html
+++ b/index.html
@@ -65,9 +65,7 @@
     <a style="color: #FFCB05" href="#publications" class="w3-bar-item w3-button">Research</a>
     <a style="color: #FFCB05" href="#teaching" class="w3-bar-item w3-button">Teaching</a>
     <!-- <a style="color: #FFCB05" href="#students" class="w3-bar-item w3-button">Students</a> -->
-
     <a style="color: #FFCB05" href="#service" class="w3-bar-item w3-button">Services</a>
-
     <a style="color: #FFCB05" href="#award" class="w3-bar-item w3-button">Awards</a>
   </div>
 </nav>
@@ -133,8 +131,8 @@
 
 
 
-The Projects Section
-  <div class="w3-container w3-padding-32" id="projects">
+<!-- The News Section -->
+  <!-- <div class="w3-container w3-padding-32" id="projects">
     <h2>Recent Projects</h2>
     <p class="w3-justify">
         Actually, model compression is a kind of technique for developing portable deep neural networks with lower memory and computation costs. I have done several projects in Huawei including some smartphones' applications in 2019 and 2020 (e.g. Mate 30 and Honor V30). Currently, I am leading the AdderNet project, which aims to develop a series of deep learning models using only additions (<a href="https://www.reddit.com/r/MachineLearning/comments/ekw2s1/r_addernet_do_we_really_need_multiplications_in/">Discussions on Reddit</a>).
@@ -168,7 +166,7 @@ The Projects Section
         </p>  
 
   </div>
-  
+   -->
   <!-- The Talks Section -->
   <!-- <div class="w3-container w3-light-grey w3-padding-32" id="talks">
     <h2>Talks</h2>
@@ -256,17 +254,7 @@ The Projects Section
         <strong>Xiao Zhang</strong>, Hanqing Guo, James Mariani, and Li Xiao
         <br>
         <em>MobiCom</em> 2022 | <a style="color: #447ec9" href="data/U-Star.pdf">paper</a> 
-        <!-- <em>MobiCom</em> 2022 | <a style="color: #447ec9" href="https://dl.acm.org/doi/pdf/10.1145/3495243.3517019">paper</a>  -->
-        <!-- <em>MobiCom</em> 2022 | <a style="color: #447ec9" href="https://www.sigmobile.org/mobicom/2022/accepted.html">paper</a>  -->
       </p>
-
-      <!-- <p>
-        <li><strong>Handling Data Heterogeneity in Federated Learning via Knowledge Fusion</strong>
-        <br>
-        Xu Zhou, Xinyu Lei, Cong Yang, Yichun Shi, <strong>Xiao Zhang</strong>, and Jingwen Shi
-        <br>
-        <em>arXiv preprint</em> 2022 | <a style="color: #447ec9" href="data/FL_fusion.pdf">paper</a> 
-        </p> -->
 
       <p>
       <li><strong>LiFOD: Lighting Extra Data via Fine-grained OWC Dimming</strong>
@@ -410,10 +398,6 @@ The Projects Section
       </p>
     </ol>
 
-
-
-
-
   </div> 
 
 <!-- 
@@ -487,7 +471,7 @@ The Projects Section
     <p><li> 2013, 2014, National Encouragement Scholarship, China</p>
   </div>  
 
-
+</div> 
 
 
  
