--- a/index.html
+++ b/index.html
@@ -64,7 +64,6 @@
     <!-- <a href="#talks" class="w3-bar-item w3-button">Talks</a> -->
     <a style="color: #FFCB05" href="#publications" class="w3-bar-item w3-button">Research</a>
     <a style="color: #FFCB05" href="#teaching" class="w3-bar-item w3-button">Teaching</a>
-    <!-- <a style="color: #FFCB05" href="#students" class="w3-bar-item w3-button">Students</a> -->
     <a style="color: #FFCB05" href="#service" class="w3-bar-item w3-button">Services</a>
     <a style="color: #FFCB05" href="#award" class="w3-bar-item w3-button">Awards</a>
   </div>
@@ -131,8 +130,8 @@
 
 
 
-<!-- The News Section -->
-  <!-- <div class="w3-container w3-padding-32" id="projects">
+The Projects Section
+  <div class="w3-container w3-padding-32" id="projects">
     <h2>Recent Projects</h2>
     <p class="w3-justify">
         Actually, model compression is a kind of technique for developing portable deep neural networks with lower memory and computation costs. I have done several projects in Huawei including some smartphones' applications in 2019 and 2020 (e.g. Mate 30 and Honor V30). Currently, I am leading the AdderNet project, which aims to develop a series of deep learning models using only additions (<a href="https://www.reddit.com/r/MachineLearning/comments/ekw2s1/r_addernet_do_we_really_need_multiplications_in/">Discussions on Reddit</a>).
@@ -166,7 +165,7 @@
         </p>  
 
   </div>
-   -->
+  
   <!-- The Talks Section -->
   <!-- <div class="w3-container w3-light-grey w3-padding-32" id="talks">
     <h2>Talks</h2>
@@ -254,7 +253,17 @@
         <strong>Xiao Zhang</strong>, Hanqing Guo, James Mariani, and Li Xiao
         <br>
         <em>MobiCom</em> 2022 | <a style="color: #447ec9" href="data/U-Star.pdf">paper</a> 
+        <!-- <em>MobiCom</em> 2022 | <a style="color: #447ec9" href="https://dl.acm.org/doi/pdf/10.1145/3495243.3517019">paper</a>  -->
+        <!-- <em>MobiCom</em> 2022 | <a style="color: #447ec9" href="https://www.sigmobile.org/mobicom/2022/accepted.html">paper</a>  -->
       </p>
+
+      <!-- <p>
+        <li><strong>Handling Data Heterogeneity in Federated Learning via Knowledge Fusion</strong>
+        <br>
+        Xu Zhou, Xinyu Lei, Cong Yang, Yichun Shi, <strong>Xiao Zhang</strong>, and Jingwen Shi
+        <br>
+        <em>arXiv preprint</em> 2022 | <a style="color: #447ec9" href="data/FL_fusion.pdf">paper</a> 
+        </p> -->
 
       <p>
       <li><strong>LiFOD: Lighting Extra Data via Fine-grained OWC Dimming</strong>
@@ -398,6 +407,10 @@
       </p>
     </ol>
 
+
+
+
+
   </div> 
 
 <!-- 
@@ -421,8 +434,6 @@
     </p>
   </div> -->
 
-
-
     <!-- The Teaching Section -->
   <div class="w3-container w3-light-grey w3-padding-32" id="teaching">
     <h2>Teaching</h2>
@@ -434,7 +445,7 @@
 
   </div>
 
-  <!-- The Services Section -->
+<!-- The Services Section -->
   <div class="w3-container w3-padding-32" id="service">
     <h2>Services</h2>
       <!-- <p><li> Reviewer of <a href="https://icml.cc/Conferences/2021">ICML 2021</a>, <a href="https://nips.cc/Conferences/2021/">NeurIPS 2021</a>.</p> -->
@@ -442,20 +453,6 @@
       <p><li> External Reviewer <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<em>INFOCOM 2020-2024, MobiCom 2024, ICC 2023, CVPR 2023, MASS 2019, GLOBECOM 2019, IEEE Transactions on <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Human-Machine Systems (THMS), IEEE Transactions on Mobile Computing (TMC), IEEE Journal on Selected Areas in <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Communications (JSAC), IEEE Communication Letters</em>
       
   </div>
-
-    <!-- The Students Section -->
-    <!-- <div class="w3-container w3-padding-32" id="students">
-      <h2>Students</h2>
-
-        <p><li> <strong>Ph.D.</strong> <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<em> </em>
-        <p><li> <strong>master</strong> <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<em> </em>
-        <p><li> <strong>undergraduate</strong> <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<em> 2024-now: Deniz Acikbas, Soham Naik, Alan Raj, Zaynab Mourtada, Vannya Guedes, Fatima Qasem </em>
-        <p><li> <strong>undergraduate</strong> <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<em> </em>
-        <p><li> <strong>research intern</strong> <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<em> </em>
-        <p><li> <strong>high school</strong> <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<em> </em>
-        <p><li> <strong>visiting scholar</strong>  <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<em> </em>
-    </div> -->
-  
 
 
   <!-- The Awards Section -->
@@ -470,11 +467,6 @@
     <p><li> 2015, President Scholarship, Top 10, TUT</p>
     <p><li> 2013, 2014, National Encouragement Scholarship, China</p>
   </div>  
-
-</div> 
-
-
- 
 <!-- 
   <div class="w3-light-grey w3-center w3-padding-24">
 
