--- a/index.html
+++ b/index.html
@@ -452,12 +452,33 @@ The Projects Section
     <div class="w3-container w3-padding-32" id="students">
       <h2>Students</h2>
         <!-- <p><li> Reviewer of <a href="https://icml.cc/Conferences/2021">ICML 2021</a>, <a href="https://nips.cc/Conferences/2021/">NeurIPS 2021</a>.</p> -->
-        <p><li> <strong>Ph.D.</strong> <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<em> </em>
-        <p><li> <strong>master</strong> <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<em> </em>
-        <p><li> <strong>undergraduate</strong> <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<em> 2024-now: Deniz Acikbas, Soham Naik, Alan Raj, Zaynab Mourtada, Vannya Guedes, Fatima Qasem </em>
-        <p><li> <strong>research intern</strong> <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<em> </em>
+          <p>
+            <li> 
+                <strong>Ph.D.</strong><br>
+                <span style="display: inline-block; margin-left: 20px;"><em></em></span>
+            </li>
+        </p>
+          <p>
+            <li> 
+                <strong>master</strong><br>
+                <span style="display: inline-block; margin-left: 20px;"><em>Nishaant Swetharanyam Madhankumar</em></span><br>
+                <span style="display: inline-block; margin-left: 20px;"><em>Sourabh Somanath Harapanahalli</em></span>
+            </li>
+        </p>
+          <p>
+            <li> 
+                <strong>research intern</strong><br>
+                <span style="display: inline-block; margin-left: 20px;"><em>Deniz Acikbas</em></span><br>
+                <span style="display: inline-block; margin-left: 20px;"><em>Soham Naik</em></span><br>
+                <span style="display: inline-block; margin-left: 20px;"><em>Alan Raj</em></span><br>
+                <span style="display: inline-block; margin-left: 20px;"><em>Zaynab Mourtada</em></span><br>
+            </li>
+        </p>
+      
+        <!-- <p><li> <strong>undergraduate</strong> <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<em> 2024-now: Deniz Acikbas, Soham Naik, Alan Raj, Zaynab Mourtada, Vannya Guedes, Fatima Qasem </em> -->
+        <!-- <p><li> <strong>research intern</strong> <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<em> </em>
         <p><li> <strong>high school</strong> <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<em> </em>
-        <p><li> <strong>visiting scholar</strong>  <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<em> </em>
+        <p><li> <strong>visiting scholar</strong>  <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<em> </em> -->
     </div>
   
 
