--- a/index.html
+++ b/index.html
@@ -64,8 +64,10 @@
     <!-- <a href="#talks" class="w3-bar-item w3-button">Talks</a> -->
     <a style="color: #FFCB05" href="#publications" class="w3-bar-item w3-button">Research</a>
     <a style="color: #FFCB05" href="#teaching" class="w3-bar-item w3-button">Teaching</a>
-    <a style="color: #FFCB05" href="#service" class="w3-bar-item w3-button">Services</a>
+    <a style="color: #FFCB05" href="#students" class="w3-bar-item w3-button">Students</a>
     <a style="color: #FFCB05" href="#award" class="w3-bar-item w3-button">Awards</a>
+    <a style="color: #FFCB05" href="#service" class="w3-bar-item w3-button">Services</a>
+    
   </div>
 </nav>
 
