--- a/index.html
+++ b/index.html
@@ -461,21 +461,21 @@ The Projects Section
           
           <p>
             <li><strong>master</strong>
-            <br>
+            <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
             Nishaant Swetharanyam Madhankumar
-            <br>
+            <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
             Sourabh Somanath Harapanahalli 
             </p>
 
           <p>
             <li><strong>undergraduate</strong>
-            <br>
+            <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
             Deniz Acikbas
-            <br>
+            <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
             Soham Naik 
-            <br>
+            <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
             Alan Raj
-            <br>
+            <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
             Zaynab Mourtada
             </p>
 
