--- a/index.html
+++ b/index.html
@@ -462,9 +462,9 @@ The Projects Section
           <p>
             <li><strong>master</strong>
             <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-            Nishaant Swetharanyam Madhankumar
+            Nishaant Madhankumar
             <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-            Sourabh Somanath Harapanahalli 
+            Sourabh Harapanahalli 
             </p>
 
           <p>
