add Fatima after email confirmation

--- a/index.html
+++ b/index.html
@@ -477,6 +477,8 @@ The Projects Section
             Alan Raj
             <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
             Zaynab Mourtada
+            <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+            Fatima Qasem
             </p>
 
 
