--- a/index.html
+++ b/index.html
@@ -182,8 +182,7 @@ The Projects Section
   <div class="w3-container w3-padding-32"" id="publications">
     <h2>Research</h2>
       <p class="w3-left-align" style="line-height:200%">
-        I'm interested in the next-generation wireless communication and networking, particularly optical wireless communication (OWC) and mmWave; underwater optical communication, localization, and navigation; mobile computing; vehicle-to-everything networks; AI-assisted novel applications; the Internet-of-Things; digital health, CPS security and the Metaverse.
-      </p>
+        I am interested in next-generation wireless communication and networking, particularly in the areas of optical wireless communication (OWC) and mmWave technologies. My interests also extend to underwater optical communication, localization, and navigation, as well as mobile computing. Additionally, I am intrigued by vehicle-to-everything (V2X) networks, AI-assisted novel applications, the Internet of Things (IoT), digital health, cyber-physical systems (CPS) security, and the Metaverse.      </p>
 
     <h4> Conference Papers:</h4>
 
@@ -441,8 +440,26 @@ The Projects Section
     <h2>Teaching</h2>
       <!-- <p><li> Reviewer of <a href="https://icml.cc/Conferences/2021">ICML 2021</a>, <a href="https://nips.cc/Conferences/2021/">NeurIPS 2021</a>.</p> -->
       <!-- <p><li> Leturer <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<em>MSN 2024</em> -->
-      <p><li> At UM-Dearborn <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<em>CIS 400 Programming Languages</em>
-      <p><li> At MSU <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<em>CSE 331 Algorithms and Data Structures, CSE 260 Discrete Structures, CSE 232 Introduction to Programming II </em>
+        <p>
+          <li>At UM-Dearborn
+          <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+          CIS 400 Programming Languages
+          <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+          Sourabh Harapanahalli 
+          </p>
+
+          <p>
+            <li>At MSU
+            <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+            CSE 331 Algorithms and Data Structures
+            <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+            CSE 260 Discrete Structures
+            <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+            CSE 232 Introduction to Programming II
+            </p>
+
+      <!-- <p><li> At UM-Dearborn <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<em>CIS 400 Programming Languages</em>
+      <p><li> At MSU <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<em>CSE 331 Algorithms and Data Structures, CSE 260 Discrete Structures, CSE 232 Introduction to Programming II </em> -->
 
 
   </div>
@@ -499,6 +516,17 @@ The Projects Section
     <p><li> 2015, President Scholarship, Top 10, TUT</p>
     <p><li> 2013, 2014, National Encouragement Scholarship, China</p>
   </div>  
+
+
+  <!-- The Services Section -->
+  <div class="w3-container w3-padding-32" id="service">
+    <h2>Services</h2>
+      <!-- <p><li> Reviewer of <a href="https://icml.cc/Conferences/2021">ICML 2021</a>, <a href="https://nips.cc/Conferences/2021/">NeurIPS 2021</a>.</p> -->
+      <p><li> Program Committee <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<em>MSN 2024, ICPADS 2024</em>
+      <p><li> External Reviewer <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<em>INFOCOM 2020-2024, MobiCom 2024, ICC 2023, CVPR 2023, MASS 2019, GLOBECOM 2019, IEEE Transactions on <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Human-Machine Systems (THMS), IEEE Transactions on Mobile Computing (TMC), IEEE Journal on Selected Areas in <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Communications (JSAC), IEEE Communication Letters</em>
+      
+  </div>
+
 <!-- 
   <div class="w3-light-grey w3-center w3-padding-24">
 
