--- a/index.html
+++ b/index.html
@@ -181,9 +181,12 @@ The Projects Section
  <!-- The Publications Section -->
   <div class="w3-container w3-padding-32"" id="publications">
     <h2>Research</h2>
-      <p class="w3-left-align" style="line-height:200%">
-        I am interested in next-generation wireless communication and networking, particularly in the areas of optical wireless communication (OWC) and mmWave technologies. My interests also extend to underwater optical communication, localization, and navigation, as well as mobile computing. Additionally, I am intrigued by vehicle-to-everything (V2X) networks, AI-assisted novel applications, the Internet of Things (IoT), digital health, cyber-physical systems (CPS) security, and the Metaverse.      </p>
 
+    <p class="w3-justify" style="width:200%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;max-width:600px">
+      I am interested in next-generation wireless communication and networking, particularly in the areas of optical wireless communication (OWC) and mmWave technologies. My interests also extend to underwater optical communication, localization, and navigation, as well as mobile computing. Additionally, I am intrigued by vehicle-to-everything (V2X) networks, AI-assisted novel applications, the Internet of Things (IoT), digital health, cyber-physical systems (CPS) security, and the Metaverse.      </p>
+    </p>
+    
+        
     <h4> Conference Papers:</h4>
 
     <ol>
