--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@ The Projects Section
     </p>
     
         
-    <h4> Conference Papers:</h4>
+    <h4> Conference Papers</h4>
 
     <ol>
 
@@ -314,7 +314,7 @@ The Projects Section
       </p>
     </ol>
 
-    <h4> Journal Papers:</h4>
+    <h4> Journal Papers</h4>
     <ol>
       <p>
         <li><strong>Exploiting Fine-grained Dimming with Improved LiFi Throughput
@@ -354,7 +354,7 @@ The Projects Section
     </ol>
 
 
-    <h4> Workshop/Poster/Demo Papers:</h4>
+    <h4> Workshop/Poster/Demo Papers</h4>
     <ol>
 
       <p>
