--- a/index.html
+++ b/index.html
@@ -524,8 +524,10 @@ The Projects Section
     <h2>Services</h2>
       <!-- <p><li> Reviewer of <a href="https://icml.cc/Conferences/2021">ICML 2021</a>, <a href="https://nips.cc/Conferences/2021/">NeurIPS 2021</a>.</p> -->
       <p><li> Program Committee <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<em>MSN 2024, ICPADS 2024</em>
-      <p><li> External Reviewer <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<em>INFOCOM 2020-2024, MobiCom 2024, ICC 2023, CVPR 2023, MASS 2019, GLOBECOM 2019, IEEE Transactions on <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Human-Machine Systems (THMS), IEEE Transactions on Mobile Computing (TMC), IEEE Journal on Selected Areas in <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Communications (JSAC), IEEE Communication Letters</em>
-      
+      <p><li> External Reviewer 
+        <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+        <p class="w3-justify" style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;max-width:800px">
+          <em>INFOCOM 2020-2024, MobiCom 2024, ICC 2023, CVPR 2023, MASS 2019, GLOBECOM 2019, IEEE Transactions on Human-Machine Systems (THMS), IEEE Transactions on Mobile Computing (TMC), IEEE Journal on Selected Areas in Communications (JSAC), IEEE Communication Letters </em>        </p>
   </div>
 
 <!-- 
