--- a/index.html
+++ b/index.html
@@ -519,16 +519,32 @@ The Projects Section
   </div>  
 
 
-  <!-- The Services Section -->
+  <!-- The Services Section
   <div class="w3-container w3-padding-32" id="service">
     <h2>Services</h2>
-      <!-- <p><li> Reviewer of <a href="https://icml.cc/Conferences/2021">ICML 2021</a>, <a href="https://nips.cc/Conferences/2021/">NeurIPS 2021</a>.</p> -->
-      <p><li> Program Committee <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<em>MSN 2024, ICPADS 2024</em>
+      <p><li> Reviewer of <a href="https://icml.cc/Conferences/2021">ICML 2021</a>, <a href="https://nips.cc/Conferences/2021/">NeurIPS 2021</a>.</p> -->
+      <!-- <p><li> Program Committee <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<em>MSN 2024, ICPADS 2024</em>
       <p><li> External Reviewer 
         <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
         <p class="w3-justify" style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;max-width:800px">
           <em>INFOCOM 2020-2024, MobiCom 2024, ICC 2023, CVPR 2023, MASS 2019, GLOBECOM 2019, IEEE Transactions on Human-Machine Systems (THMS), IEEE Transactions on Mobile Computing (TMC), IEEE Journal on Selected Areas in Communications (JSAC), IEEE Communication Letters </em>        </p>
+  </div> -->
+
+  <div class="w3-container w3-padding-32" id="service">
+    <h2>Services</h2>
+    <p>
+      <li> Program Committee <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<em>MSN 2024, ICPADS 2024</em>
+    </p>
+    <p>
+      <li> External Reviewer 
+        <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+        <p class="w3-justify" style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;max-width:800px">
+          <em>INFOCOM 2020-2024, MobiCom 2024, ICC 2023, CVPR 2023, MASS 2019, GLOBECOM 2019, IEEE Transactions on Human-Machine Systems (THMS), IEEE Transactions on Mobile Computing (TMC), IEEE Journal on Selected Areas in Communications (JSAC), IEEE Communication Letters</em>
+        </p>
+      </li>
+    </p>
   </div>
+  
 
 <!-- 
   <div class="w3-light-grey w3-center w3-padding-24">
