--- a/index.html
+++ b/index.html
@@ -508,14 +508,14 @@ The Projects Section
   <!-- The Awards Section -->
   <div class="w3-container w3-light-grey w3-padding-32" id="award">
     <h2>Awards</h2>
-    <p><li> 2023, 2021, 2019, Graduate Office Fellowship, MSU</p>
+    <p><li> 2023/2021/2019, Graduate Office Fellowship, MSU</p>
     <p><li> 2023, Dissertation Completion Fellowship, MSU</p>
     <p><li> 2022, Graduate Travel Fellowship, MSU</p>
     <p><li> 2019, Student Travel Grant, NSF-mmWaveRCN</p>
-    <p><li> 2016, 2017, 2018, Postgraduate Scholarship, NPU</p>
+    <p><li> 2016-2018, Postgraduate Scholarship, NPU</p>
     <p><li> 2016, Outstanding Graduate, TUT</p>
     <p><li> 2015, President Scholarship, Top 10, TUT</p>
-    <p><li> 2013, 2014, National Encouragement Scholarship, China</p>
+    <p><li> 2013/2014, National Encouragement Scholarship</p>
   </div>  
 
 
