--- a/index.html
+++ b/index.html
@@ -515,7 +515,7 @@ The Projects Section
     <p><li> 2016-2018, Postgraduate Scholarship, NPU</p>
     <p><li> 2016, Outstanding Graduate, TUT</p>
     <p><li> 2015, President Scholarship, Top 10, TUT</p>
-    <p><li> 2013/2014, National Encouragement Scholarship</p>
+    <p><li> 2013/2014, National Encouragement Scholarship, China</p>
   </div>  
 
 
