--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@ The Projects Section
         <br>
         <strong>Xiao Zhang</strong>, Li Xiao, and Matt W. Mutka        
         <br>
-        <em>ICNP</em> 2024 | <a style="color: #447ec9" href="">paper</a> 
+        <em>ICNP</em> 2024 | <a style="color: #447ec9" href="data/ICNP24_HoloCube.pdf">paper</a> 
         </p>
 
       <p>
