add high school

--- a/index.html
+++ b/index.html
@@ -498,9 +498,13 @@ The Projects Section
             Zaynab Mourtada
             <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
             Fatima Qasem
-            
             </p>
 
+            <p>
+              <li><strong>highschool</strong>
+              <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+              Max Xiao
+              </p>
 
     </div>
   
