--- a/index.html
+++ b/index.html
@@ -531,7 +531,7 @@ The Projects Section
       <!-- <p><li> Reviewer of <a href="https://icml.cc/Conferences/2021">ICML 2021</a>, <a href="https://nips.cc/Conferences/2021/">NeurIPS 2021</a>.</p> -->
         <p><li> <strong>Program Committee</strong>  
           <p class="w3-justify" style="width:90%;border:5px;border-spacing:5px;border-collapse:separate;margin-right:1em;margin-left:1em;max-width:600px">
-            <em>MSN 2024, ICPADS 2024 </em>        </p>
+            <em>ICNC 2025, MSN 2024, ICPADS 2024 </em>        </p>
   
       <p><li> <strong>External Reviewer</strong>  
         <p class="w3-justify" style="width:90%;border:5px;border-spacing:5px;border-collapse:separate;margin-right:1em;margin-left:1em;max-width:600px">
