--- a/index.html
+++ b/index.html
@@ -483,8 +483,8 @@ The Projects Section
             <li><strong>master</strong>
             <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
             Nishaant Madhankumar
-            <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-            Sourabh Harapanahalli 
+            <!-- <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+            Sourabh Harapanahalli  -->
             </p>
 
           <p>
