--- a/index.html
+++ b/index.html
@@ -499,6 +499,8 @@ The Projects Section
             Zaynab Mourtada
             <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
             Fatima Qasem
+            <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+            Areeba Mirza
             </p>
 
             <p>
