add new students

--- a/index.html
+++ b/index.html
@@ -504,6 +504,10 @@ The Projects Section
             Fatima Qasem
             <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
             Areeba Mirza
+            <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+            Jason Grose
+            <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+            Fatima Mohammed
             </p>
 
             <p>
