add intern student

--- a/index.html
+++ b/index.html
@@ -510,11 +510,17 @@ The Projects Section
             Fatima Mohammed
             </p>
 
-            <p>
-              <li><strong>high school</strong>
-              <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-              Max Xiao
-              </p>
+          <p>
+            <li><strong>high school</strong>
+            <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+            Max Xiao
+            </p>
+
+          <p>
+            <li><strong>intern</strong>
+            <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+            Hasky Fynn
+            </p>
 
     </div>
   
