--- a/index.html
+++ b/index.html
@@ -508,6 +508,8 @@ The Projects Section
             Jason Grose
             <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
             Fatima Mohammed
+            <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+            Christian Nwobu
             </p>
 
 
