--- a/index.html
+++ b/index.html
@@ -93,7 +93,8 @@
       <h1><a>Xiao Zhang</a></h1>
 
         <p class="w3-center">
-          <a>Office: 212 CIS</a> | <a>Lab: 108 CIS</a>
+          <a>Office: 212 CIS Bld.</a> | <a>Lab: 108 CIS Bld.</a>
+          <a>4901 Evergreen Road, Dearborn, MI 48128</a>
         </p>
 
         <p class="w3-justify" style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;max-width:600px">
@@ -517,6 +518,8 @@ The Projects Section
             <li><strong>intern</strong>
             <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
             Hasky Fynn
+            <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+            Xinmei Fu
             </p>
 
             
