--- a/index.html
+++ b/index.html
@@ -452,7 +452,9 @@ The Projects Section
         <p>
           <li>At UM-Dearborn
           <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-          CIS 400 Programming Languages
+          CIS 400 Programming Languages  2024 Fall
+          <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+          CIS 437/537 Advanced Networking  2025 Winter  
           </p>
 
           <p>
