--- a/index.html
+++ b/index.html
@@ -491,6 +491,8 @@ The Projects Section
             Nishaant Madhankumar
             <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
             Rohit Raval 
+            <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+            Jaskirat Sudan 
             </p>
 
           <p>
@@ -500,16 +502,16 @@ The Projects Section
             <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
             Soham Naik 
             <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-            Alan Raj
+            <!-- Alan Raj
             <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
             Zaynab Mourtada
-            <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+            <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; -->
             Fatima Qasem
             <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
             Areeba Mirza
             <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-            Jason Grose
-            <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+            <!-- Jason Grose
+            <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; -->
             Fatima Mohammed
             <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
             Christian Nwobu
@@ -525,11 +527,11 @@ The Projects Section
             </p>
 
             
-          <p>
+          <!-- <p>
             <li><strong>high school</strong>
             <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
             Max Xiao
-            </p>
+            </p> -->
 
     </div>
   
