--- a/index.html
+++ b/index.html
@@ -121,6 +121,7 @@
 <!-- The News Section -->
   <div class="w3-container w3-light-grey w3-padding-32" id="news">
    <h2>News</h2>
+      <p><li> <strong> 01/2025, invited to be a TPC member of IEEE INFOCOM DeepWireless 2025.</strong>
       <p><li> <strong> 10/2024, invited to be a TPC member of IEEE ICNC 2025.</strong>
       <p><li> <strong> 09/2024, joined UM-Dearborn as a tenure-track Assistant Professor.</strong>
       <p><li> <strong> 07/2024, invited to be a TPC member of IEEE ICPADS 2024.</strong>
@@ -557,7 +558,7 @@ The Projects Section
       <!-- <p><li> Reviewer of <a href="https://icml.cc/Conferences/2021">ICML 2021</a>, <a href="https://nips.cc/Conferences/2021/">NeurIPS 2021</a>.</p> -->
         <p><li> <strong>Program Committee</strong>  
           <p class="w3-justify" style="width:90%;border:5px;border-spacing:5px;border-collapse:separate;margin-right:1em;margin-left:1em;max-width:600px">
-            <em>ICNC 2025, MSN 2024, ICPADS 2024 </em>        </p>
+            <em>INFOCOM DeepWireless 2025, ICNC 2025, MSN 2024, ICPADS 2024 </em>        </p>
   
       <p><li> <strong>External Reviewer</strong>  
         <p class="w3-justify" style="width:90%;border:5px;border-spacing:5px;border-collapse:separate;margin-right:1em;margin-left:1em;max-width:600px">
