--- a/index.html
+++ b/index.html
@@ -489,33 +489,35 @@ The Projects Section
           <p>
             <li><strong>master</strong>
             <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-            Nishaant Madhankumar
+            Ashwin Sarvadey
+            <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+            Jaskirat Sudan 
             <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
             Rohit Raval 
             <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-            Jaskirat Sudan 
+            Nishaant Madhankumar
             </p>
 
           <p>
             <li><strong>undergraduate</strong>
             <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-            Deniz Acikbas
+            Christian Nwobu （NSF STEM Scholar）
             <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-            Soham Naik 
+            Deniz Acikbas
             <!-- <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
             Alan Raj
             <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
             Zaynab Mourtada -->
             <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-            Fatima Qasem
+            Fatima Qasem （NSF STEM Scholar）
             <!-- <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
             Areeba Mirza
             <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
             Jason Grose -->
             <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-            Fatima Mohammed
+            Fatima Mohammed （NSF STEM Scholar）
             <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-            Christian Nwobu
+            Soham Naik 
             </p>
 
 
@@ -523,8 +525,8 @@ The Projects Section
             <li><strong>intern</strong>
             <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
             Hasky Fynn
-            <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-            Xinmei Fu
+            <!-- <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+            Xinmei Fu -->
             </p>
 
             
