--- a/index.html
+++ b/index.html
@@ -515,10 +515,10 @@ The Projects Section
             Jason Grose -->
             <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
             Fatima Mohammed （NSF STEM Scholar）
+            <!-- <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+            Soham Naik  -->
             <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-            Soham Naik 
-            <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-            Syed Gilani （SURE Scholar）
+            Syed Gilani （UM SURE Scholar）
             </p>
 
 
