--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
       
    </ul>
       <button id="toggle-btn" class="w3-button w3-margin-top" style="background: transparent; border: none; color: #447ec9; cursor: pointer;">
-        + more
+        More
       </button>
   </div> 
 
