--- a/index.html
+++ b/index.html
@@ -122,6 +122,7 @@
   <div class="w3-container w3-light-grey w3-padding-32" id="news">
    <h2>News</h2>
    <ul id="news-list">
+      <li><strong>05/2025, awarded OE Creation grant, thanks UM-Dearborn and OE committee!</strong></li>
       <li><strong>01/2025, invited to be a TPC member of IEEE INFOCOM DeepWireless 2025.</strong></li>
       <li><strong>10/2024, invited to be a TPC member of IEEE ICNC 2025.</strong></li>
       <li><strong>09/2024, joined UM-Dearborn as a tenure-track Assistant Professor.</strong></li>
@@ -568,6 +569,8 @@ The Projects Section
   <!-- The Awards Section -->
   <div class="w3-container w3-light-grey w3-padding-32" id="award">
     <h2>Awards</h2>
+    <p><li> 2025, OE Creation Grant, UM-Dearborn</p>
+    <p><li> 2025, NeTS ECI Travel Grant, NSF</p>
     <p><li> 2023/2021/2019, Graduate Office Fellowship, MSU</p>
     <p><li> 2023, Dissertation Completion Fellowship, MSU</p>
     <p><li> 2022, Graduate Travel Fellowship, MSU</p>
